Update and rename Information for Content team.html to Info_for_Content_team.html

--- a/Info_for_Content_team.html
+++ b/Info_for_Content_team.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+<title>Information for Content team</title>
+</head>
+<body>
 In order to forward ticket to Content team,follow these steps.
 
 1. Ask customer to try to install patch manually from Downloadfolder
@@ -13,3 +18,8 @@ cmd /c reg export HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\SideBySide\Winn
 Untick "Allow user interaction" (Run on desktop) - this hides the initial process. 
 
 Click Run
+</body>
+</html>
+
+
+
