Update and rename Registry keys with commands to reg_keys_commands.html

--- a/reg_keys_commands.html
+++ b/reg_keys_commands.html
@@ -1,5 +1,8 @@
-
-
+<html>
+<head>
+<title>Some useful Registry keys</title>
+</head>
+<body>
 Find device id on a machine:
 
 HKLM\Software\Verismic\PowerManager\DeviceID
@@ -34,4 +37,5 @@ cmd /c del "C:\$Vcmstemp$\Logs\*.*" /F /Q - to clear all data in logs
 
 cmd /c reg export "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion\Component Based Servicing" "C:\$Vcmstemp$\Zendesk_Ticket_17226_Component_Based_Servicing_23Jan2020.reg"
 cmd /c reg export "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\WindowsUpdate" "C:\$Vcmstemp$\Zendesk_Ticket_17226_Windows_Update_23Jan2020.reg"
-
+</body>
+</html>
