--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ All efforts are greatly appreciated!
 
 <a href="index.html"> Main</a><br>
 <a href="basic_linux_comm.html">Basix Linux Commands in a context of specific OS</a><br>
-<a href=office_365_deploy.html">Steps to deploy Office 365</a><br>
+<a href="office_365_deploy.html">Steps to deploy Office 365</a><br>
 <a href="err_installing_win_10.html"> Errors which may occur while installing Windows 10</a><br>
 <a href="reg_keys_commands.html">Useful registry keys with commands</a><br>
 
