--- a/basic_linux_comm.html
+++ b/basic_linux_comm.html
@@ -80,7 +80,7 @@ echo xxxxxx | sudo tee /etc/verismic
 shutdown -r now (for reboot tasks) - reboots the device
 who -b
 
-<a href="index.html"> Main</a><br>
-
+<b><a href="index.html"> Main</a><br>
+</b>
 </body>
 </html>
