--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <b></b>
 <b>All efforts are greatly appreciated!</b>
 <b></b>
-<b><a href="index.html"> Main</a><br>
-<b><a href="basic_linux_comm.html">Basix Linux Commands in a context of specific OS</a><br>
-<b><a href="office_365_deploy.html">Steps to deploy Office 365</a><br>
-<b><a href="err_installing_win_10.html"> Errors which may occur while installing Windows 10</a><br>
-<b><a href="reg_keys_commands.html">Useful registry keys with commands</a></h4><br>
+<a href="index.html"> Main</a><br>
+<a href="basic_linux_comm.html">Basix Linux Commands in a context of specific OS</a><br>
+<a href="office_365_deploy.html">Steps to deploy Office 365</a><br>
+<a href="err_installing_win_10.html"> Errors which may occur while installing Windows 10</a><br>
+<a href="reg_keys_commands.html">Useful registry keys with commands</a></h4><br>
+<a href="ErrorCodesInstallingWindows10.md">Error codes while installing Windows 10</a></h4><br>
 <b></b>
 </body>
 </html>
