--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <title>Main page</title>
 </head>
 <body>
-<h2>Syxsense Technical Support Documentation</h2>
-<b><h4>Some useful links and descriptions are going to be added here as an attempt to gather in one place useful and up-to date information </b>
-<b>regarding recently added features, workarounds or specification about Syxsense. </b>
-<b></b>
+<h2>Syxsense Technical Support Documentation</h2><br>
+<b><h4>Some useful links and descriptions are going to be added here as an attempt to gather in one place useful and up-to date information </b><br>
+<b>regarding recently added features, workarounds or specification about Syxsense. </b><br>
+<b></b><br>
 <b>All efforts are greatly appreciated!</b>
 <b></b><br>
 <a href="index.html"> Main</a><br>
