--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <title>Main page</title>
 </head>
 <body>
-<h2>Syxsense Technical Support Documentation</h2><br>
-<b><h4>Some useful links and descriptions are going to be added here as an attempt to gather in one place useful and up-to date information </b><br>
-<b>regarding recently added features, workarounds or specification about Syxsense. </b><br>
-<b></b><br>
-<b>All efforts are greatly appreciated!</b>
-<b></b><br>
+  <h2>Syxsense Technical Support Documentation</h2>
+<p><h4>Some useful links and descriptions are going to be added here as an attempt to gather in one place useful and up-to date information </p>
+<p>regarding recently added features, workarounds or specification about Syxsense.</p>
+<p></p>
+<p>All efforts are greatly appreciated!</p>
+<p></p>
 <a href="index.html"> Main</a><br>
 <a href="basic_linux_comm.html">Basix Linux Commands in a context of specific OS</a><br>
 <a href="office_365_deploy.html">Steps to deploy Office 365</a><br>
 <a href="err_installing_win_10.html"> Errors which may occur while installing Windows 10</a><br>
 <a href="reg_keys_commands.html">Useful registry keys with commands</a><br>
-<b></b>
+<p></p>
 </body>
 </html>
