--- a/basic_linux_comm.html
+++ b/basic_linux_comm.html
@@ -4,81 +4,81 @@
 </head>
 <body>
 <h2>UBUNTU</h2>
-cat /etc/os-release - returns information on OS installed on a device
+<p>cat /etc/os-release - returns information on OS installed on a device
 locale - returns info on configured language settings
 hostname - returns the name which was set on a PC, Not FQDN (for LQDN need to add flag -f)
 who -b - shows the logged user. 
 dmidecode | grep -A3 '^System Information' - DMI - special tool which allows to return info on a hardware of PC.
 ifconfig - utility which allows to manage network interface configurations
 cat /proc/version - returns version of Ubuntu and core installedm date when it was installed
-ip route | grep default - returns the default ip route from ip route table
+ip route | grep default - returns the default ip route from ip route table</p>
 
 <h3>UBUNTU additionall commands</h3>
-These commands can be useful:
+<p>These commands can be useful:
 touch /path/file - creates file in in specified directory
 locale -a - display the available locales
 locale-gen fr_FR.UTF-8 - if locale doesn't appear in list, it should be installed additionally
-dpkg -l - returns the list of all packages
+dpkg -l - returns the list of all packages</p>
 
 <h2>SUSE</h2>
-cat /etc/os-release
+<p>cat /etc/os-release
 locale
 hostname
 who -b
 ifconfig
 uname -m
 cat /sys/devices/virtual/dmi/id/sys_vendor
-cat /sys/devices/virtual/dmi/id/product_name
+cat /sys/devices/virtual/dmi/id/product_name<p>
 
 <h2>REDHAT/Oracle 7 or greater</h2>
-cat /etc/os-release
+<p>cat /etc/os-release
 lsb_release -a
 locale
 hostname
 who -b
 dmidecode | grep -A3 '^System Information'
 ip addr show
-cat /proc/version
+cat /proc/version<p>
 
-systemctl status sshd - checks the stae of ssh,  if the port was not open, you would see: No route to host
-firewall-cmd --list-all - to check the current active zones and their open ports and services.
+<p>systemctl status sshd - checks the stae of ssh,  if the port was not open, you would see: No route to host
+firewall-cmd --list-all - to check the current active zones and their open ports and services.<p>
 
 
 <h2>REDHAT/Oracle 6</h2>
-lsb_release -a
+<p>lsb_release -a
 locale
 hostname
 who -b
 dmidecode | grep -A3 '^System Information'
 ip addr show
-cat /proc/version
+cat /proc/version<p>
 
 <h2>AmazonLinux (AMI)</h2>
-cat /etc/os-release
+<p>cat /etc/os-release
 locale
 hostname
 who -b
 ifconfig
 cat /proc/version
 cat /sys/devices/virtual/dmi/id/sys_vendor
-cat /sys/devices/virtual/dmi/id/product_name
+cat /sys/devices/virtual/dmi/id/product_name<p>
 
 <h2>Generic Linux (Fallback)</h2>
-cat /etc/os-release
+<p>cat /etc/os-release
 locale
 hostname
 who -b
 ifconfig
 cat /proc/version
 cat /sys/devices/virtual/dmi/id/sys_vendor
-cat /sys/devices/virtual/dmi/id/product_name
+cat /sys/devices/virtual/dmi/id/product_name<p>
 
 <h2>All Linux</h2>
-cat /etc/verismic - returns the device ID of a device
+<p>cat /etc/verismic - returns the device ID of a device
 df - report file system disk space usage
 echo xxxxxx | sudo tee /etc/verismic
 shutdown -r now (for reboot tasks) - reboots the device
-who -b
+who -b<p>
 
 <b><a href="index.html"> Main</a><br>
 </b>
