--- a/Info_for_Content_team.html
+++ b/Info_for_Content_team.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Information for Content team</title>
+<title><h2>Information for Content team</h2></title>
 </head>
 <body>
 <p>In order to forward ticket to Content team,follow these steps.</p>
