--- a/basic_linux_comm.html
+++ b/basic_linux_comm.html
@@ -13,7 +13,7 @@ ifconfig - utility which allows to manage network interface configurations
 cat /proc/version - returns version of Ubuntu and core installedm date when it was installed
 ip route | grep default - returns the default ip route from ip route table</p>
 
-<h3>UBUNTU additionall commands</h3>
+<h3>UBUNTU additional commands</h3>
 <p>These commands can be useful:
 touch /path/file - creates file in in specified directory
 locale -a - display the available locales
