--- a/err_installing_win_10.html
+++ b/err_installing_win_10.html
@@ -2,6 +2,16 @@
 <title>
       Errors while installing Windows 10
     </title>
+      
+      <style>
+      table,
+      th,
+      td {
+        padding: 10px;
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+    </style>
  
  <body>
     <table>
